final_check_output_v3.txt
    Checking stellar-defi-toolkit v0.1.0 (/home/phantom-call/stellar-defi-toolkit)
warning: field `address` is never read
  --> src/contracts/token.rs:22:5
   |
12 | pub struct TokenContract {
   |            ------------- field in this struct
...
22 |     address: Option<Address>,
   |     ^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `address` is never read
  --> src/contracts/liquidity_pool.rs:26:5
   |
12 | pub struct LiquidityPoolContract {
   |            --------------------- field in this struct
...
26 |     address: Option<Address>,
   |     ^^^^^^^

warning: field `address` is never read
  --> src/contracts/staking.rs:25:5
   |
11 | pub struct StakingContract {
   |            --------------- field in this struct
...
25 |     address: Option<Address>,
   |     ^^^^^^^

warning: field `address` is never read
  --> src/contracts/governance.rs:21:5
   |
11 | pub struct GovernanceContract {
   |            ------------------ field in this struct
...
21 |     address: Option<Address>,
   |     ^^^^^^^

warning: constant `KEY_ADMIN` is never used
  --> src/contracts/vault.rs:25:7
   |
25 | const KEY_ADMIN: &str = "admin";
   |       ^^^^^^^^^

warning: constant `KEY_PAUSED` is never used
  --> src/contracts/vault.rs:26:7
   |
26 | const KEY_PAUSED: &str = "paused";
   |       ^^^^^^^^^^

warning: constant `KEY_TOTAL_SHARES` is never used
  --> src/contracts/vault.rs:27:7
   |
27 | const KEY_TOTAL_SHARES: &str = "tot...
   |       ^^^^^^^^^^^^^^^^

warning: constant `KEY_TOTAL_ASSETS` is never used
  --> src/contracts/vault.rs:28:7
   |
28 | const KEY_TOTAL_ASSETS: &str = "tot...
   |       ^^^^^^^^^^^^^^^^

warning: constant `KEY_PERFORMANCE_FEE_BPS` is never used
  --> src/contracts/vault.rs:29:7
   |
29 | const KEY_PERFORMANCE_FEE_BPS: &str...
   |       ^^^^^^^^^^^^^^^^^^^^^^^

warning: constant `KEY_TREASURY` is never used
  --> src/contracts/vault.rs:30:7
   |
30 | const KEY_TREASURY: &str = "treasury";
   |       ^^^^^^^^^^^^

warning: constant `KEY_LAST_HARVEST` is never used
  --> src/contracts/vault.rs:31:7
   |
31 | const KEY_LAST_HARVEST: &str = "las...
   |       ^^^^^^^^^^^^^^^^

warning: constant `KEY_ACCUMULATED_FEES` is never used
  --> src/contracts/vault.rs:32:7
   |
32 | const KEY_ACCUMULATED_FEES: &str = ...
   |       ^^^^^^^^^^^^^^^^^^^^

warning: `stellar-defi-toolkit` (lib) generated 12 warnings
error[E0061]: this function takes 4 arguments but 3 arguments were supplied
  --> src/main.rs:56:34
   |
56 | ... = TokenContract::new(name, symbol, supply);
   |       ^^^^^^^^^^^^^^^^^^ ----  ------  ------ argument #3 of type `soroban_sdk::string::String` is missing
   |                          |     |
   |                          |     expected `soroban_sdk::string::String`, found `std::string::String`
   |                          expected `&Env`, found `String`
   |
   = note: `std::string::String` and `soroban_sdk::string::String` have similar names, but are actually distinct types
note: `std::string::String` is defined in crate `alloc`
  --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/alloc/src/string.rs:353:0
note: `soroban_sdk::string::String` is defined in crate `soroban_sdk`
  --> /home/phantom-call/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-21.7.7/src/string.rs:37:1
   |
37 | pub struct String {
   | ^^^^^^^^^^^^^^^^^
note: associated function defined here
  --> src/contracts/token.rs:27:12
   |
27 |     pub fn new(_env: &Env, name: so...
   |            ^^^
help: provide the argument
   |
56 -             let token_contract = TokenContract::new(name, symbol, supply);
56 +             let token_contract = TokenContract::new(/* &soroban_sdk::env::Env */, /* soroban_sdk::string::String */, /* soroban_sdk::string::String */, supply);
   |

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> src/main.rs:62:24
   |
62 | ... = LiquidityPoolContract::new(token_a, token_b);
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^------------------
   |                                 ||        |
   |                                 ||        expected `soroban_sdk::string::String`, found `std::string::String`
   |                                 |expected `&Env`, found `String`
   |                                 argument #3 of type `soroban_sdk::string::String` is missing
   |
   = note: `std::string::String` and `soroban_sdk::string::String` have similar names, but are actually distinct types
note: `std::string::String` is defined in crate `alloc`
  --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/alloc/src/string.rs:353:0
note: `soroban_sdk::string::String` is defined in crate `soroban_sdk`
  --> /home/phantom-call/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-21.7.7/src/string.rs:37:1
   |
37 | pub struct String {
   | ^^^^^^^^^^^^^^^^^
note: associated function defined here
  --> src/contracts/liquidity_pool.rs:31:12
   |
31 |     pub fn new(_env: &Env, token_a:...
   |            ^^^
help: provide the argument
   |
62 -             let pool = LiquidityPoolContract::new(token_a, token_b);
62 +             let pool = LiquidityPoolContract::new(/* &soroban_sdk::env::Env */, /* soroban_sdk::string::String */, /* soroban_sdk::string::String */);
   |

For more information about this error, try `rustc --explain E0061`.
error: could not compile `stellar-defi-toolkit` (bin "stellar-defi-cli") due to 2 previous errors
